# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\ExchangeController;
+use App\Http\Controllers\GenderController;
 use App\Http\Controllers\InventoryItemController;
 use App\Http\Controllers\ReportInfectionController;
 use App\Http\Controllers\ReportsController;
@@ -18,18 +19,24 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
+Route::prefix('inventory-items')->group(function () {
+
+    Route::get('/all', [InventoryItemController::class, 'index']);
+});
+
+Route::prefix('genders')->group(function () {
+
+    Route::get('/all', [GenderController::class, 'index']);
+});
+
 Route::prefix('survivors')->group(function () {
 
     Route::get('/all', [SurvivorController::class, 'index']);
     Route::get('/show/{survivor}', [SurvivorController::class, 'show']);
+    Route::get('/inventory/{survivor}', [SurvivorController::class, 'inventory']);
 
     Route::post('/store', [SurvivorController::class, 'store']);
     Route::post('/update/{survivor}', [SurvivorController::class, 'update']);
-});
-
-Route::prefix('inventory-items')->group(function () {
-
-    Route::get('/all', [InventoryItemController::class, 'index']);
 });
 
 Route::prefix('report-infections')->group(function () {
